Fix four dot alignments
corrected alignment of four dots on desktop and mobile

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -580,15 +580,15 @@
         .four-dots {
             display: inline-flex;
             flex-direction: column;
-            gap: var(--size-40);
-            margin-left: var(--size-50);
+            gap: 1.25rem;
+            transform: translate(130%, 0%);
         }
 
         .dot-offers {
             display: inline-flex;
             flex-direction: column;
-            margin-left: var(--size-50);
-            gap: var(--size-100);
+            gap: 5.525rem;
+            transform: translate(43%, -2%);
         }
 
         .full-image img {
