--- a/styles/styles.css
+++ b/styles/styles.css
@@ -242,10 +242,11 @@
     display: flex;
     justify-content: space-around;
     font-size: var(--size-30);
+    transform: translate(0%, -33%);
 }
 
 #line-dot {
-
+    width: 75%;
 }
 
 #dot {
